# mcp-token-api-rest

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
src/: client.py  server.py  utils.py
tests/: conftest.py  test_server.py
