[project]
name = "mcp-token-api-rest"
version = "0.1.0"
description = "REST-based MCP server for The Graph Token API"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.3.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: marks tests as integration tests (require external services)",
]